--- a/ford-mustang.html
+++ b/ford-mustang.html
@@ -65,7 +65,7 @@
             </p>
 
             <h3>Side View</h3>
-            <img src="images/ford side.jpg" alt="Ford Mustang Side View">
+            <img src="ford side.jpg" alt="Ford Mustang Side View">
 
             <h3>Front View</h3>
             <img src="images/ford front.jpg" alt="Ford Mustang Front View">
