--- a/ford-mustang.html
+++ b/ford-mustang.html
@@ -68,7 +68,7 @@
             <img src="ford side.jpg" alt="Ford Mustang Side View">
 
             <h3>Front View</h3>
-            <img src="images/ford front.jpg" alt="Ford Mustang Front View">
+            <img src="ford front.jpg" alt="Ford Mustang Front View">
         </div>
     </div>
 
