--- a/mazda rx7.html
+++ b/mazda rx7.html
@@ -61,10 +61,10 @@
             <p>The Mazda RX-7 was born in the late '70s, but it wasn't until its third iteration was released for the '93 model year that most enthusiasts really began to care about it. Sold in the U.S. for just three years, the final-generation RX-7 makes for one of the rarest Japanese supercars ever sold in America—if for no other reason than a few years, just wasn't a whole lot of time to rack up impressive sales figures.</p>
 
             <h3>Side View</h3>
-            <img src="images/mazda side.jpg" alt="Ford Mustang Side View">
+            <img src="mazda side.jpg" alt="Ford Mustang Side View">
 
             <h3>Front View</h3>
-            <img src="images/mazda front.jpg" alt="Ford Mustang Front View">
+            <img src="mazda front.jpg" alt="Ford Mustang Front View">
         </div>
     </div>
 
