--- a/index.html
+++ b/index.html
@@ -163,28 +163,28 @@
 
         <!-- Additional Car Items --> 
         <a href="car5.html" class="car-item">
-            <img src="images/AUDI.jpg" alt="Car 5">
+            <img src="AUDI.jpg" alt="Car 5">
             <h3>Audi A6</h3>
             <p>Year: 2022</p>
             <p>Price: ₱4.69 Million </p>
         </a>
 
         <a href="car6.html" class="car-item">
-            <img src="images/mercedes.jpg" alt="Car 6">
+            <img src="mercedes.jpg" alt="Car 6">
             <h3>Mercedes-Benz C-Class</h3>
             <p>Year: 2023</p>
             <p>Price: ₱3.99 Million</p>
         </a>
 
         <a href="car7.html" class="car-item">
-            <img src="images/911.jpg" alt="Car 7">
+            <img src="911.jpg" alt="Car 7">
             <h3>Porsche 911</h3>
             <p>Year: 2021</p>
             <p>Price:  ₱7.288 Million</p>
         </a>
 
         <a href="car8.html" class="car-item">
-            <img src="images/range.jpg" alt="Car 8">
+            <img src="range.jpg" alt="Car 8">
             <h3>Range Rover Evoque</h3>
             <p>Year: 2022</p>
             <p>Price:  ₱16.99 Million</p>
@@ -192,28 +192,28 @@
 
         <!-- Additional Car Items -->
         <a href="car5.html" class="car-item">
-            <img src="images/raptot.jpg" alt="Car 5">
+            <img src="raptot.jpg" alt="Car 5">
             <h3>Ford Raptor</h3>
             <p>Year: 2024</p>
             <p>Price: ₱2,345 Million </p>
         </a>
 
         <a href="car6.html" class="car-item">
-            <img src="images/F40.jpg" alt="Car 6">
+            <img src="F40.jpg" alt="Car 6">
             <h3>Ferrari F40</h3>
             <p>Year: 1987</p>
             <p>Price: ₱6,765, Million</p>
         </a>
 
         <a href="car7.html" class="car-item">
-            <img src="images/R34.jpg" alt="Car 7">
+            <img src="R34.jpg" alt="Car 7">
             <h3>SKYLINE GT-R34</h3>
             <p>Year: 2002</p>
             <p>Price:  ₱2,880 Million</p>
         </a>
 
         <a href="car8.html" class="car-item">
-            <img src="images/SILVIA.jpg" alt="Car 8">
+            <img src="SILVIA.jpg" alt="Car 8">
             <h3>NIssan Silvia</h3>
             <p>Year: 2003</p>
             <p>Price:  ₱1,280 Million</p>
