--- a/index.html
+++ b/index.html
@@ -134,28 +134,28 @@
  
     <div class="car-list">
         <a href="ford-mustang.html" class="car-item">
-            <img src="images/fordmustang.jpg" alt="Car 1">
+            <img src="fordmustang.jpg" alt="Car 1">
             <h3>Ford Mustang</h3>
             <p>Year: 2022</p>
             <p>Price: ₱3.999 Million</p>
         </a>
 
         <a href="mazda rx7.html" class="car-item">
-            <img src="images/mazda.jpg" alt="Car 2">
+            <img src="mazda.jpg" alt="Car 2">
             <h3>Mazda Rx7</h3>
             <p>Year: 2021</p>
             <p>Price: ₱4,232 Million</p>
         </a>
 
         <a href="car3.html" class="car-item">
-            <img src="images/supra.jpg" alt="Car 3">
+            <img src="supra.jpg" alt="Car 3">
             <h3>Toyota Supra</h3>
             <p>Year: 2020</p>
             <p>Price: ₱5.396 Million</p>
         </a>
 
         <a href="car4.html" class="car-item">
-            <img src="images/M3 GTR.jpg" alt="Car 4">
+            <img src="M3 GTR.jpg" alt="Car 4">
             <h3>BMW M3 GTR</h3>
             <p>Year: 2002</p>
             <p>Price: ₱10 Million</p>
