--- a/supra.html
+++ b/supra.html
@@ -61,10 +61,10 @@
             <p>The Toyota Supra (Japanese: トヨタ・スープラ, Hepburn: Toyota Sūpura) is a sports car and grand tourer manufactured by the Toyota Motor Corporation beginning in 1978. The name "supra" is derived from the Latin prefix, meaning "above", "to surpass" or "go beyond".</p>
 
             <h3>Side View</h3>
-            <img src="images/supra side.jpg" alt="Ford Mustang Side View">
+            <img src="supra side.jpg" alt="Ford Mustang Side View">
 
             <h3>Front View</h3>
-            <img src="images/supra front.jpg" alt="Ford Mustang Front View">
+            <img src="supra front.jpg" alt="Ford Mustang Front View">
         </div>
     </div>
 
