--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p>Price: ₱4,232 Million</p>
         </a>
 
-        <a href="car3.html" class="car-item">
+        <a href="supra index.html" class="car-item">
             <img src="supra.jpg" alt="Car 3">
             <h3>Toyota Supra</h3>
             <p>Year: 2020</p>
