--- a/m3_gtr.html
+++ b/m3_gtr.html
@@ -64,10 +64,10 @@
             </p>
 
             <h3>Side View</h3>
-            <img src="images/m3 side viewww.jpg" alt="Ford Mustang Side View">
+            <img src="m3 side viewww.jpg" alt="Ford Mustang Side View">
 
             <h3>Front View</h3>
-            <img src="images/m3 gtr front.jpg" alt="Ford Mustang Front View">
+            <img src="m3 gtr front.jpg" alt="Ford Mustang Front View">
         </div>
     </div>
 
