--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <p>Price: ₱5.396 Million</p>
         </a>
 
-        <a href="m3_gtr.html" class="car-item">
+        <a href="m3gtr.html" class="car-item">
             <img src="M3 GTR.jpg" alt="Car 4">
             <h3>BMW M3 GTR</h3>
             <p>Year: 2002</p>
